@@ -2,8 +2,8 @@
     <widget xmlns   = "http://www.w3.org/ns/widgets"
         xmlns:gap   = "http://phonegap.com/ns/1.0"
         id          = "org.loyolalawwtech.civprobook"
-        versionCode = "13"
-        version     = "2.8.0">
+        versionCode = "14"
+        version     = "2.9.0">
 
     <!-- versionCode is optional and Android only -->
 
@@ -19,6 +19,7 @@
     <gap:plugin name="com.phonegap.plugin.statusbar" version="1.1.0" />
     <gap:plugin name="it.mobimentum.phonegapspinnerplugin" version="1.1.0"/>
     <gap:plugin name="org.apache.cordova.device" version="0.2.8" />
+    <gap:plugin name="cordova-plugin-inappbrowser " version="1.0.1" />
 
     <preference name="permissions" value="none" />
     <preference name="phonegap-version" value="3.7.0" />         
