@@ -1,6 +1,8 @@
-<h3>New in version 2.8.0</h3>
+<h3>New in version 2.9.0</h3>
 <ul>
-    <li>Updates laws to include 2015 legislative session.</li>
+    <li>Updates laws to include 2016 legislative session.</li>
+    <li>Want to support the development of LACivProBook? 
+    Please <a style="color:red" onclick="window.open('https://www.paypal.me/judsonmitchell', '_system');"> donate</a> !</li>
 </ul>
 <div id="update-action">
     <a class="btn btn-default update-dismiss">Dismiss</a> 
